<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_draw</name>
  <version>0.1.0</version>
  <description>Let the turtle draw stuff</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>simple_launch</depend>
  <depend>turtlesim</depend>
  <depend>image_pipeline</depend>
  <depend>python3-opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
